Add README Fix: typo in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <option>North America</option>
           <option>South America</option>
           <option>Africa</option>
-          <option>Aisa</option>
+          <option>Asia</option>
           <option>Australia</option>
           <option>Europe</option>
         </select>
