Fix: bugs in main.js

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="container">
       <h1 class="jumbotron">Super Galactic Age Calculator</h1>
-      <p>
-        Enter your information below and the Super Galactic Age Calculator will
-        calculate your age for each of the planets in the solar system (and
-        Pluto!). It will also estimate how many years you're expected to survive
-        on earth based on where you live and your lifestyle.
-      </p>
       <form id="galactic-calc">
+        <p>
+          Enter your information below and the Super Galactic Age Calculator
+          will calculate your age for each of the planets in the solar system
+          (and Pluto!). It will also estimate how many years you're expected to
+          survive on earth based on where you live and your lifestyle.
+        </p>
         <div class="form-group">
           <label for="user-age">What is your age?</label>
           <input id="user-age" class="form-control" type="number" />
@@ -53,9 +53,9 @@
           <option value="3">3: My brain is a scribbled mess of chaos</option>
         </select>
         <br />
-        <button type="button" class="btn btn-primary">To Infinity!</button>
+        <button type="submit" class="btn btn-primary">To Infinity!</button>
       </form>
+      <div id="output"></div>
     </div>
-    <div id="output"></div>
   </body>
 </html>
