Fix: wording in introductory paragraph in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
         <p>
           Enter your information below and the Super Galactic Age Calculator
           will calculate your age for each of the planets in the solar system
-          (and Pluto!). It will also estimate how many years you're expected to
-          survive on earth based on where you live and your lifestyle.
+          (and Pluto!). It will also estimate how many years left you're
+          expected to live on each planet based on your location and your
+          lifestyle.
         </p>
         <div class="form-group">
           <label for="user-age">What is your age?</label>
